Fix card size on mobile

--- a/styles.css
+++ b/styles.css
@@ -158,8 +158,8 @@ li.selected {
 }
 
 .card {
-  width: 300px;
-  height: 200px;
+  width: 18em;
+  height: 11em;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
@@ -179,7 +179,7 @@ li.selected {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 9em;
+  font-size: 8em;
   font-weight: bold;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -250,10 +250,5 @@ li.selected {
   button {
     font-size: 1.4em;
     padding: 0.2em 0.5em;
-  }
-
-  .exercise-container {
-    gap: 0.2em;
-    font-size: 6em;
   }
 }
